--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
                         </td>
                         <td>
                             <p>Subtotal: </p>
-                            <p>GST (12%): </p>
+                            <label for="gstRate">GST Rate:</label>
+                            <select id="gstRate">
+                                <option value="12">12%</option>
+                                <option value="18">18%</option>
+                            </select>
                             <p><strong>Grand Total: </strong></p>
                         </td>
                         <td>
@@ -139,4 +143,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
 
 </body>
+
 </html>
